[package]
name = "ninescript-compiler"
description = "A LLVM-backed compiler for ninescript."
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
regex = "1.10.6"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }

[build-dependencies]
lalrpop = "0.20.2"
